Fix alert component's button text to not wrap

--- a/src/components/Alert/Alert.module.scss
+++ b/src/components/Alert/Alert.module.scss
@@ -47,4 +47,5 @@
 
 .button {
   margin-left: auto;
+  flex-shrink: 0;
 }
